--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -94,7 +94,8 @@ http {
 	# authenticator
         location /v3/oauth2
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "authenticator" in proxy_nginx_service_list %}
             proxy_pass http://authenticator-api:5000;
         {%- else %}
@@ -125,7 +126,8 @@ http {
 	# security 
         location /v3/security
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "security" in proxy_nginx_service_list %}
             proxy_pass http://sk-api:8080;
         {%- else %}
@@ -138,7 +140,8 @@ http {
 	# tenants 
         location /v3/tenants
         {
-            # auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "tenants" in proxy_nginx_service_list %}
             proxy_pass http://tenants-api:5000;
         {%- else %}
@@ -148,13 +151,25 @@ http {
             proxy_set_header Host localhost:5000;
         }
 
-	# _auth
+	# This is an internal endpoint, used to check if a token has been revoked.
+        # Each service's location stanza must add this internal endpoint as an `auth_request` before issuing the proxy_pass to its own service.
+        #
+        # For example, 
+        #  auth_request /_auth;
+        #
         location /_auth {
             internal;
            
             # check to see if either of the x-tapis-tenant or x-tapis-user are set then return 200
             set $x_tenant $http_x_tapis_tenant;
             set $x_user $http_x_tapis_user;
+
+            # NOTE: currently, we do NOT check if service tokens have been revoked. the reason for this decision is that
+            # there are many HTTP service requests made for a single user request, and checking token revocation adds
+            # about 30ms to each call. 
+            #
+            # the following code can be commented if we DO want to check service tokens for revocation 
+            # ---------------------------------------------------------------------------------------------------------
             if ($x_tenant){
               return 200;
             }
@@ -168,15 +183,20 @@ http {
             if ($token ~ "^$") {
               return 200; 
             }
+            # ---------------------------------------------------------------------------------------------------------
+
+            # Here we make the GET request to acually check the token
+            # it is a GET request
             proxy_method GET;
             proxy_set_header X-Tapis-Token $http_x_tapis_token;
-            proxy_pass {{proxy_primary_site_admin_tenant_base_url}}/v3/site-router/check;
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}}/v3/site-router/tokens/check;
         }
     
 	# sites
         location /v3/sites
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "tenants" in proxy_nginx_service_list %}
             proxy_pass http://tenants-api:5000;
         {%- else %}
@@ -189,7 +209,8 @@ http {
 	# meta
         location /v3/meta
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "meta" in proxy_nginx_service_list %}
             proxy_pass http://restheart-security:8080;
         {%- else %}
@@ -202,7 +223,8 @@ http {
 	# streams
         location /v3/streams
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "streams" in proxy_nginx_service_list %}
             proxy_pass http://streams-api:5000;
         {%- else %}
@@ -223,7 +245,8 @@ http {
 	# files
         location /v3/files
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "files" in proxy_nginx_service_list %}
             proxy_pass http://files-api:8080;
         {%- else %}
@@ -237,7 +260,8 @@ http {
 	# systems
         location /v3/systems
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "systems" in proxy_nginx_service_list %}
             proxy_pass http://systems-api:8080;
         {%- else %}
@@ -263,7 +287,8 @@ http {
 	# jobs
         location /v3/jobs
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "jobs" in proxy_nginx_service_list %}
             proxy_pass http://jobs-api:8080;
         {%- else %}
@@ -276,7 +301,8 @@ http {
 	# actors 
         location /v3/actors
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "actors" in proxy_nginx_service_list %}
             proxy_pass http://actors-nginx:80;
         {%- else %}
@@ -289,7 +315,8 @@ http {
 	# apps
         location /v3/apps
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "apps" in proxy_nginx_service_list %}
             proxy_pass http://apps-api:8080;
         {%- else %}
@@ -314,7 +341,8 @@ http {
 	# pgrest
         location /v3/pgrest
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "pgrest" in proxy_nginx_service_list %}
             proxy_pass http://pgrest-api:5000;
         {%- else %}
@@ -334,7 +362,8 @@ http {
 	# notifications
         location /v3/notifications
         {
-    #        auth_request /_auth;
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
         {%- if "notifications" in proxy_nginx_service_list %}
             proxy_pass http://notifications-api:8080;
         {%- else %}
