move auth check to inside if

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -140,9 +140,9 @@ http {
 	# authenticator
         location /v3/oauth2
         {
+        {%- if "authenticator" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "authenticator" in proxy_nginx_service_list %}
             proxy_pass http://authenticator-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -172,9 +172,9 @@ http {
 	# security 
         location /v3/security
         {
+        {%- if "security" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "security" in proxy_nginx_service_list %}
             proxy_pass http://sk-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -186,9 +186,9 @@ http {
 	# tenants 
         location /v3/tenants
         {
+        {%- if "tenants" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "tenants" in proxy_nginx_service_list %}
             proxy_pass http://tenants-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -241,9 +241,9 @@ http {
 	# sites
         location /v3/sites
         {
+        {%- if "tenants" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "tenants" in proxy_nginx_service_list %}
             proxy_pass http://tenants-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -255,9 +255,9 @@ http {
 	# meta
         location /v3/meta
         {
+        {%- if "meta" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "meta" in proxy_nginx_service_list %}
             proxy_pass http://restheart-security:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -269,9 +269,9 @@ http {
 	# streams
         location /v3/streams
         {
+        {%- if "streams" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "streams" in proxy_nginx_service_list %}
             proxy_pass http://streams-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -291,9 +291,9 @@ http {
 	# files
         location /v3/files
         {
+        {%- if "files" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "files" in proxy_nginx_service_list %}
             proxy_pass http://files-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -306,9 +306,9 @@ http {
 	# systems
         location /v3/systems
         {
+        {%- if "systems" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "systems" in proxy_nginx_service_list %}
             proxy_pass http://systems-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -320,8 +320,9 @@ http {
 	# tokens
         location /v3/tokens
         {
-            # we intentionally do NOT include an auth_request for Tokens because tokens only handles service requests.
         {%- if "tokens" in proxy_nginx_service_list %}
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
             proxy_pass http://tokens-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -333,9 +334,9 @@ http {
 	# jobs
         location /v3/jobs
         {
+        {%- if "jobs" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "jobs" in proxy_nginx_service_list %}
             proxy_pass http://jobs-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -347,9 +348,9 @@ http {
 	# actors 
         location /v3/actors
         {
+        {%- if "actors" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "actors" in proxy_nginx_service_list %}
             proxy_pass http://actors-nginx:80;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -361,6 +362,8 @@ http {
         location /v3/pods
         {
         {%- if "pods" in proxy_nginx_service_list %}
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
             proxy_pass http://pods-nginx:80;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -373,9 +376,9 @@ http {
 	# apps
         location /v3/apps
         {
+        {%- if "apps" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "apps" in proxy_nginx_service_list %}
             proxy_pass http://apps-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -399,9 +402,9 @@ http {
 	# pgrest
         location /v3/pgrest
         {
+        {%- if "pgrest" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "pgrest" in proxy_nginx_service_list %}
             proxy_pass http://pgrest-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -420,9 +423,9 @@ http {
 	# notifications
         location /v3/notifications
         {
+        {%- if "notifications" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token_revoked.json; 
-        {%- if "notifications" in proxy_nginx_service_list %}
             proxy_pass http://notifications-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -435,6 +438,8 @@ http {
         location /v3/globus-proxy
         {
         {%- if "globus-proxy" in proxy_nginx_service_list %}
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
             proxy_pass http://globus-proxy:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -447,6 +452,8 @@ http {
         location /v3/workflows
         {
         {%- if "workflows" in proxy_nginx_service_list %}
+            auth_request /_auth;
+            error_page 500 /token_revoked.json; 
             proxy_pass http://workflows-api-service:8000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
