fix issue with token-revoke configmap

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -142,7 +142,7 @@ http {
         {
         {%- if "authenticator" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://authenticator-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -174,7 +174,7 @@ http {
         {
         {%- if "security" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://sk-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -188,7 +188,7 @@ http {
         {
         {%- if "tenants" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://tenants-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -243,7 +243,7 @@ http {
         {
         {%- if "tenants" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://tenants-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -257,7 +257,7 @@ http {
         {
         {%- if "meta" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://restheart-security:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -271,7 +271,7 @@ http {
         {
         {%- if "streams" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://streams-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -293,7 +293,7 @@ http {
         {
         {%- if "files" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://files-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -308,7 +308,7 @@ http {
         {
         {%- if "systems" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://systems-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -322,7 +322,7 @@ http {
         {
         {%- if "tokens" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://tokens-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -336,7 +336,7 @@ http {
         {
         {%- if "jobs" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://jobs-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -350,7 +350,7 @@ http {
         {
         {%- if "actors" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://actors-nginx:80;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -363,7 +363,7 @@ http {
         {
         {%- if "pods" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://pods-nginx:80;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -378,7 +378,7 @@ http {
         {
         {%- if "apps" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://apps-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -404,7 +404,7 @@ http {
         {
         {%- if "pgrest" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://pgrest-api:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -425,7 +425,7 @@ http {
         {
         {%- if "notifications" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://notifications-api:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -439,7 +439,7 @@ http {
         {
         {%- if "globus-proxy" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://globus-proxy:5000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -453,7 +453,7 @@ http {
         {
         {%- if "workflows" in proxy_nginx_service_list %}
             auth_request /_auth;
-            error_page 500 /token_revoked.json; 
+            error_page 500 /token-revoked.json; 
             proxy_pass http://workflows-api-service:8000;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
