adding addtional proxy directives for the _auth endpoint to fix POSTs that were hanging and ultimately returning a 'token revoked' error even when the token was valid and worked with GET methods.

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -234,6 +234,10 @@ http {
             # Here we make the GET request to acually check the token
             # it is a GET request
             proxy_method GET;
+            proxy_pass_request_body off;
+            proxy_pass_request_headers off;
+            proxy_set_header Host $host;
+            proxy_set_header Content-Length "";
             proxy_set_header X-Tapis-Token $http_x_tapis_token;
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}}/v3/site-router/tokens/check;
         }
