--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -262,6 +262,15 @@ http {
         {%- if "meta" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
+            if ($host = 'vdjserver.tapis.io'){
+                proxy_pass http://restheart-security-vdj:8080;
+            }
+            if ($host = 'vdjserver.staging.tapis.io'){
+                proxy_pass http://restheart-security-vdj:8080;
+            }
+            if ($host = 'vdjserver.develop.tapis.io'){
+                proxy_pass http://restheart-security-vdj:8080;
+            }
             proxy_pass http://restheart-security:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
@@ -270,6 +279,7 @@ http {
             proxy_set_header Host $host;
         }
         
+
 	# streams
         location /v3/streams
         {
