Updated pods service and tapis-proxy for newest Pods service bits. Pods service change from using nginx to traefik so changed some services + added configs.
Due to Traefik, tapis-proxy routing TCP to Pods service had to change in the proxy. Changed routes, changed /auth section so that any requests go directly to site-router rather than through normal https. New regex/logic in the nginx map as well.

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -23,26 +23,21 @@ stream {
     # 'map' maps input string to output variable. Regex works.
     # Ports used are purely random. Feel free to change.
     map $ssl_preread_server_name $instanceport {
-        # Route TCP with following whatever.pods.whatever.develop.tapis.ioto pods-nginx.
-        "~pods.{{proxy_nginx_server_name}}"      5510;
-        # Else default to 8443 (listened to by http stanza).
-        default                         8443;
+        # Route TCP with following whatever.pods.whatever.develop.tapis.io to pods-traefik
+        "~*.pods.*.develop.tapis.io"    5510;
+        # Route non-pod things to 8443 (arbitrary port, listened to by http stanza) to follow regular nginx walkthrough
+        "~*.develop.tapis.io"           8443;
+        # Else default to 5510
+        default                         5510;
     }
  
-    # pods_service. Route TCP to pods-nginx pod.
+    # pods_service. Route TCP to pods-traefik pod.
     server {
         listen                 5510;
         ssl_preread            off;
         proxy_timeout          600s;
         access_log /dev/stdout stream_routing;
-    {%- if "pods" in proxy_nginx_service_list %}
-        proxy_pass             pods-nginx:80;
-    {%- else %}
-        # cgarcia- Unsure if this entire 'server' block should be in an if, or if we
-        # should what I'm doing here.
-        proxy_pass             {{proxy_primary_site_admin_tenant_base_url}};
-    {%- endif %}        
-
+        proxy_pass             pods-traefik:80;
     }
 
     # Listen for all incoming requests. Preread server name (for mapping). Then pass. 
@@ -239,7 +234,10 @@ http {
             proxy_set_header Host $host;
             proxy_set_header Content-Length "";
             proxy_set_header X-Tapis-Token $http_x_tapis_token;
-            proxy_pass {{proxy_primary_site_admin_tenant_base_url}}/v3/site-router/tokens/check;
+            # previously was https://admin.develop.tapis.io/v3/site-router/tokens/check.
+            # Initial pods service nginx map stanza breaks when this url is used though because
+            # SNI doesn't map up correctly on the request. Changing to direct site-router route.
+            proxy_pass http://site-router-api:8000/v3/site-router/tokens/check;
         }
     
 	# sites
@@ -378,7 +376,7 @@ http {
         {%- if "pods" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
-            proxy_pass http://pods-nginx:80;
+            proxy_pass http://pods-traefik:80;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
         {%- endif %}        
