Updating proxy to work for all envs.

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -23,10 +23,11 @@ stream {
     # 'map' maps input string to output variable. Regex works.
     # Ports used are purely random. Feel free to change.
     map $ssl_preread_server_name $instanceport {
-        # Route TCP with following whatever.pods.whatever.develop.tapis.io to pods-traefik
-        "~*.pods.*.develop.tapis.io"    5510;
+        # Route TCP with following whatever.pods.whatever.tenant.tapis.io to pods-traefik
+        # proxy_nginx_server_name would be `*.develop.tapis.io`, `*.tapis.io`, etc.
+        "~*.pods.{{proxy_nginx_server_name}}"    5510;
         # Route non-pod things to 8443 (arbitrary port, listened to by http stanza) to follow regular nginx walkthrough
-        "~*.develop.tapis.io"           8443;
+        "~{{proxy_nginx_server_name}}"           8443;
         # Else default to 5510
         default                         5510;
     }
