Add parameters to elasticsearch for upgrade compatibility

--- a/templates/monitoring/apps/elasticsearch.yml
+++ b/templates/monitoring/apps/elasticsearch.yml
@@ -26,6 +26,10 @@ spec:
           value: single-node
         - name: search.max_buckets
           value: "65535"
+        - name: xpack.security.enabled
+          value: "false"
+        - name: cluster.routing.allocation.disk.watermark.enable_for_single_data_node
+          value: "true"
         volumeMounts:
         - name: elasticsearch-data
           mountPath: /usr/share/elasticsearch/data
