--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -385,6 +385,18 @@ http {
             proxy_set_header Host $host;
         }
 
+    # ui
+        location /tapis-ui
+        {
+        {%- if "tapisui" in proxy_nginx_service_list %}
+            proxy_pass http://tapisui-service:3000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
+            proxy_redirect off;
+            proxy_set_header Host $host;
+        }
+
 
 	# apps
         location /v3/apps
@@ -474,6 +486,5 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
-
     }
 }
