--- a/templates/files/rabbitmq.yml
+++ b/templates/files/rabbitmq.yml
@@ -1,13 +1,8 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: files-rabbitmq
   name: files-rabbitmq
 spec:
-  replicas: 1
-  strategy: {}
   selector:
     matchLabels:
       app: files-rabbitmq
@@ -16,17 +11,23 @@ spec:
       labels:
         app: files-rabbitmq
     spec:
+      hostname: files-rabbitmq
       containers:
         - name: files-rabbitmq
-          image: rabbitmq:3.11.7-management
+          image: rabbitmq:3.8.11-management
           ports:
             - containerPort: 5672
+            - containerPort: 15672
           env:
+            - name: HOSTNAME
+              value: "files-rabbitmq"
             - name: RABBITMQ_DEFAULT_PASS
               valueFrom:
                 secretKeyRef:
                   name: tapis-files-secrets
                   key: rabbitmq-password
+            - name: RABBITMQ_VM_MEMORY_HIGH_WATERMARK
+              value: "2147483648"
           envFrom:
             - configMapRef:
                 name: files-environment-vars
@@ -37,4 +38,3 @@ spec:
         - name: files-rabbitmq-data
           persistentVolumeClaim:
             claimName: {{files_rabbitmq_pvc}}
-      restartPolicy: Always
