--- a/templates/systems/systems-config.yml
+++ b/templates/systems/systems-config.yml
@@ -7,3 +7,4 @@ data:
   "service_tenant_id": "{{systems_service_tenant_id}}"
   "site_id": "{{systems_service_site_id}}"
   "service_name": "{{systems_service_name}}"
+  "globus_client_id": "{{systems_globus_client_id}}"
