--- a/templates/workflows/nfs-server/pvc.yml
+++ b/templates/workflows/nfs-server/pvc.yml
@@ -1,11 +1,12 @@
-apiVersion: v1
+
 kind: PersistentVolumeClaim
+apiVersion: v1
 metadata:
-  name: workflows-pipelines-pvc
+  name: workflows-nfs-server-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   storageClassName: {{workflows_storage_class}}
   resources:
     requests:
-      storage: 50Gi
+      storage: 200Gi
