--- a/templates/workflows/engine-streams/deployment.yml
+++ b/templates/workflows/engine-streams/deployment.yml
@@ -21,7 +21,7 @@ spec:
         - env:
             - name: LOG_LEVEL
               value: DEBUG
-          image: tapis/workflow-engine-streams:dev
+          image: tapis/workflow-engine-streams:{{workflows_engine_streams_image_tag}}
           imagePullPolicy: Always
           name: workflow-engine-streams
           ports:
