--- a/playbooks/roles/proxy/defaults/main/images.yml
+++ b/playbooks/roles/proxy/defaults/main/images.yml
@@ -1,3 +1,3 @@
 proxy_nginx_image: nginx:1.23.3
-proxy_site_router_api_image: tapis/site-router-api:latest
+proxy_site_router_api_image: tapis/site-router-api:{{ proxy_site_router_api_version }}
 proxy_redis_image: redis:6.2
