--- a/playbooks/roles/actors/templates/kube/actors-config.yml
+++ b/playbooks/roles/actors/templates/kube/actors-config.yml
@@ -12,7 +12,9 @@ data:
       "service_name": "abaco",
       "service_password": "$env{SERVICE_PASSWORD}",
       "tenants": {{ actors_service_tenants | to_json }},
-      "version": "1.2.0",
+      "version": "1.2.1",
+      "kubernetes_namespace": "{{pods_kube_domain}}",
+      "container_backend": "docker",
       "log_file": "",
       "log_level": "DEBUG",
       "log_filing_strategy": "combined",
@@ -58,7 +60,6 @@ data:
       "web_access_control": "jwt",
       "web_user_role": "Internal/everyone",
       "web_accept_nonce": true,
-      "web_apim_public_key": "{{actors_web_apim_public_key}}",
       "web_show_traceback": false,
       "web_log_ex": 43200,
       "web_max_log_length": 1000000,
@@ -78,13 +79,21 @@ data:
         "site_mongo_pass": "THISIsAtemP0raryPASs!",
         "site_rabbitmq_pass": "rEplac3meUSingSKplz!"
       },
+      "uh_site_object": {
+        "site_mongo_pass": "THISIsAtemP0raryPASs!",
+        "site_rabbitmq_pass": "rEplac3meUSingSKplz!"
+      },
+      "assoc_site_object": {
+        "site_mongo_pass": "THISIsAtemP0raryPASs!",
+        "site_rabbitmq_pass": "rEplac3meUSingSKplz!"
+      },
       "global_tenant_object": {
         "log_ex": 43200,
         "log_ex_limit": 86400,
         "use_tas_uid": false,
         "default_token": false,
         "generate_clients": true,
-        "global_mounts": [        
+        "global_mounts": [
           "$env{abaco_host_path}/runtime_files/data1:/home/tapis/runtime_files/_abaco_data1:ro",
           "$env{abaco_host_path}/runtime_files/data2/{tenant_id}/{username}:/home/tapis/runtime_files/_abaco_data2:rw"
         ]
@@ -99,13 +108,5 @@ data:
       },
       "sd2e_tenant_object": {
         "use_tas_uid": true
-      },
-      "DEV-STAGING_tenant_object": {
-        "default_token": true
-      },
-      "DEV-DEVELOP_tenant_object": {
-        "global_mounts": [
-          "$env{abaco_host_path}runtime/files/data1:/home/tapis/runtime_files/_abaco_data1:ro"
-        ]
       }
     }
