enable custom pgrest & meta blocks in nginx

--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -259,13 +259,16 @@ http {
 	# meta
         location /v3/meta
         {
-        {%- if "meta" in proxy_nginx_service_list %}
+{% if "meta" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://restheart-security:8080;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
+{% if proxy_meta_custom_block is defined %}
+            {{ proxy_meta_custom_block | indent(width=12) }}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -406,27 +409,18 @@ http {
 	# pgrest
         location /v3/pgrest
         {
-        {%- if "pgrest" in proxy_nginx_service_list %}
+{% if "pgrest" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://pgrest-api:5000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
-        {%- if custom_host_01 is defined %}
-            # workaround for for custom setups
-            if ($host = '{{ custom_host_01 }}') {
-                proxy_pass {{ custom_host_01_internal }};
-            }
-        {%- endif %}
-        {%- if custom_host_02 is defined %}
-            # workaround for for custom setups
-            if ($host = '{{ custom_host_02 }}') {
-                proxy_pass {{ custom_host_02_internal }};
-            }
-        {%- endif %}
+{% if proxy_pgrest_custom_block is defined %}
+            {{ proxy_pgrest_custom_block | indent(width=12) }}
+{% endif %}
         }
 
 	# notifications
